# flicker

./: .coveragerc  .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  codecov.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  versions.json
.github/workflows/: build-package.yml  build.yml  docs.yml  mkdocs-dev.yml  mkdocs-release.yml  pypi.yml  pythonpackage.yml
0.0.16/: 404.html  index.html
0.0.16/design/: index.html
0.0.16/license/: index.html
0.0.16/search/: search_index.json
1.0.0/: index.html
1.0.0/license/: index.html
1.0.0/quick-example/: index.html
1.0.1/: 404.html
1.0.1/design/: index.html
1.0.1/releases/: index.html
1.0.1/search/: search_index.json
1.1.0/: index.html  objects.inv
1.1.0+dev/: 404.html  index.html  objects.inv
1.1.0+dev/api-reference/: FlickerColumn.html  FlickerDataFrame.html  FlickerGroupedData.html  mkname.html  recipes.html  utils.html
1.1.0+dev/getting-started/: contributing.html  installation.html  license.html  quick-example.html  releases.html
1.1.0+dev/search/: search_index.js  search_index.json
1.1.0/api-reference/: FlickerColumn.html  FlickerDataFrame.html  FlickerGroupedData.html  mkname.html  recipes.html  utils.html
1.1.0/getting-started/: contributing.html  installation.html  license.html  quick-example.html  releases.html
1.2.0+dev/: 404.html  index.html
1.2.0+dev/api-reference/: FlickerColumn.html  FlickerDataFrame.html  FlickerGroupedData.html  mkname.html  recipes.html  utils.html
1.2.0+dev/getting-started/: contributing.html  installation.html  license.html  quick-example.html  releases.html
1.2.0+dev/search/: search_index.js
1.2.0/api-reference/: FlickerColumn.html  mkname.html  recipes.html  utils.html
1.2.0/getting-started/: contributing.html  releases.html
1.2.0/search/: search_index.json
design/: index.html
docker/: Dockerfile  README.md
docker/notebooks/: demo.ipynb  example.ipynb  example.py
docs/: design.md  index.md  license.md  quick-example.md  releases.md
docs/getting-started/: installation.md
docs/tutorial/: data-analysis.md
flicker/: __init__.py  compat.py  dataframe.py  flicker.py  group.py  recipes.py  udf.py  utils.py  version.py
flicker/tests/: conftest.py  test_all.py  test_any.py  test_default_constructor.py  test_delete_extra_columns.py  test_find_empty_columns.py  test_from_columns.py  test_from_dict.py  test_from_pandas.py  test_from_rows.py  test_from_shape.py  test_gensym.py  test_get_dtype.py  test_get_float_column_names.py  test_get_non_float_column_names.py  test_groupby.py  test_grouped_data_methods.py  test_isnan.py  test_isnull.py  test_join.py  test_len_udf.py  test_min_max.py  test_type_udf.py  test_udf.py  test_union_concat.py  test_validate_column_name.py  test_write.py
getting-started/installation/: index.html
license/: index.html
mkdocs/docs/: index.md
mkdocs/overrides/: main.html
quick-example/: index.html
releases/: index.html
search/: search_index.json
src/flicker/: __init__.py  column.py  dataframe.py  group.py  mkname.py  recipes.py  summary.py  udf.py  utils.py  variables.py  version.py
stable/design/: index.html
stable/quick-example/: index.html
stable/releases/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_get_path.py
tests/column/: test_all.py  test_any.py  test_apply.py  test_astype.py  test_bitwise_boolean_operators.py  test_bool.py  test_call.py  test_default_constructor.py  test_describe.py  test_dtype.py  test_inequality_operators.py  test_invert.py  test_mean_stddev.py  test_min_max.py  test_neg.py  test_null_methods.py  test_repr_str.py  test_take.py  test_value_counts.py
(+78 files in other folders)
